// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsApi correctly with hits 1`] = `
<div
  id="content"
  role="main"
>
  <div
    id="resultPanel"
  >
    <div
      className="row mt-1 mb-1-em"
    >
      <div
        className="col-xs-6 col-md-4"
      >
        <button
          className="fdk-button fdk-button-default-no-hover fade-in-500 hidden"
          onClick={[MockFunction]}
          type="button"
        >
          Fjern alle filtre
        </button>
      </div>
      <div
        className="col-xs-6 col-md-4 col-md-offset-4"
      >
        <div
          className="pull-right"
        >
          <Select
            activeSort={null}
            items={
              Array [
                Object {
                  "defaultOption": true,
                  "field": "_score",
                  "label": "relevance",
                  "order": "asc",
                },
                Object {
                  "field": "title",
                  "label": "title",
                  "order": "asc",
                },
                Object {
                  "field": "modified",
                  "label": "modified",
                  "order": "desc",
                },
                Object {
                  "field": "publisher.name",
                  "label": "publisher",
                  "order": "asc",
                },
              ]
            }
            onChange={[MockFunction]}
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="search-filters col-md-4 flex-move-first-item-to-bottom visible-sm visible-md visible-lg"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <div>
          [filterbox]
        </div>
      </div>
      <div
        className="col-xs-12 col-md-8"
        id="datasets"
      />
      <div
        className="col-xs-12 col-md-8 col-md-offset-4 text-center"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Sidepaginering.
        </span>
        <PaginationBoxView
          activeClassName="active"
          breakClassName="break-me"
          breakLabel={
            <span>
              ...
            </span>
          }
          containerClassName="pagination"
          disableInitialCallback={true}
          disabledClassName="disabled"
          initialPage={0}
          marginPagesDisplayed={1}
          nextClassName="next"
          nextLabel="Neste side"
          onPageChange={[MockFunction]}
          pageCount={1}
          pageRangeDisplayed={2}
          previousClassName="previous"
          previousLabel="Forrige side"
          subContainerClassName="pages pagination"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render ResultsApi correctly with minimum of props 1`] = `
<div
  id="content"
  role="main"
>
  <div
    id="resultPanel"
  >
    <div
      className="row mt-1 mb-1-em"
    >
      <div
        className="col-xs-6 col-md-4"
      >
        <button
          className="fdk-button fdk-button-default-no-hover fade-in-500 hidden"
          type="button"
        >
          Fjern alle filtre
        </button>
      </div>
      <div
        className="col-xs-6 col-md-4 col-md-offset-4"
      >
        <div
          className="pull-right"
        >
          <Select
            activeSort={null}
            items={
              Array [
                Object {
                  "defaultOption": true,
                  "field": "_score",
                  "label": "relevance",
                  "order": "asc",
                },
                Object {
                  "field": "title",
                  "label": "title",
                  "order": "asc",
                },
                Object {
                  "field": "modified",
                  "label": "modified",
                  "order": "desc",
                },
                Object {
                  "field": "publisher.name",
                  "label": "publisher",
                  "order": "asc",
                },
              ]
            }
            onChange={[MockFunction]}
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="search-filters col-md-4 flex-move-first-item-to-bottom visible-sm visible-md visible-lg"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <div>
          [filterbox]
        </div>
      </div>
      <div
        className="col-xs-12 col-md-8"
        id="datasets"
      />
      <div
        className="col-xs-12 col-md-8 col-md-offset-4 text-center"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Sidepaginering.
        </span>
        <PaginationBoxView
          activeClassName="active"
          breakClassName="break-me"
          breakLabel={
            <span>
              ...
            </span>
          }
          containerClassName="pagination"
          disableInitialCallback={true}
          disabledClassName="disabled"
          initialPage={0}
          marginPagesDisplayed={1}
          nextClassName="next"
          nextLabel="Neste side"
          pageCount={NaN}
          pageRangeDisplayed={2}
          previousClassName="previous"
          previousLabel="Forrige side"
          subContainerClassName="pages pagination"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render ResultsApi correctly with props 1`] = `
<div
  id="content"
  role="main"
>
  <div
    id="resultPanel"
  >
    <div
      className="row mt-1 mb-1-em"
    >
      <div
        className="col-xs-6 col-md-4"
      >
        <button
          className="fdk-button fdk-button-default-no-hover fade-in-500 hidden"
          onClick={[MockFunction]}
          type="button"
        >
          Fjern alle filtre
        </button>
      </div>
      <div
        className="col-xs-6 col-md-4 col-md-offset-4"
      >
        <div
          className="pull-right"
        >
          <Select
            activeSort={null}
            items={
              Array [
                Object {
                  "defaultOption": true,
                  "field": "_score",
                  "label": "relevance",
                  "order": "asc",
                },
                Object {
                  "field": "title",
                  "label": "title",
                  "order": "asc",
                },
                Object {
                  "field": "modified",
                  "label": "modified",
                  "order": "desc",
                },
                Object {
                  "field": "publisher.name",
                  "label": "publisher",
                  "order": "asc",
                },
              ]
            }
            onChange={[MockFunction]}
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="search-filters col-md-4 flex-move-first-item-to-bottom visible-sm visible-md visible-lg"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <div>
          [filterbox]
        </div>
      </div>
      <div
        className="col-xs-12 col-md-8"
        id="datasets"
      />
      <div
        className="col-xs-12 col-md-8 col-md-offset-4 text-center"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Sidepaginering.
        </span>
        <PaginationBoxView
          activeClassName="active"
          breakClassName="break-me"
          breakLabel={
            <span>
              ...
            </span>
          }
          containerClassName="pagination"
          disableInitialCallback={true}
          disabledClassName="disabled"
          initialPage={0}
          marginPagesDisplayed={1}
          nextClassName="next"
          nextLabel="Neste side"
          onPageChange={[MockFunction]}
          pageCount={1}
          pageRangeDisplayed={2}
          previousClassName="previous"
          previousLabel="Forrige side"
          subContainerClassName="pages pagination"
        />
      </div>
    </div>
  </div>
</div>
`;
